サンプルで画像がウィンドウ全体を占めるように変更

--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -1,9 +1,23 @@
 @charset "UTF-8";
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+
 #theta-viewer {
-  width: 1024px;
-  height: 768px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   border: 1px solid black;
+  overflow: hidden;
 }
 
 #theta-viewer.active {
